operator/pkg/gateway-api/testdata/gateway/listenerset-route-status-scoped-to-parentref/input/listenerset-route-status-scoped-to-parentref.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-parentref
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  allowedListeners:
    namespaces:
      from: Same
  listeners:
    - name: gw-parentref-listener
      port: 80
      protocol: HTTP
      hostname: gw-parentref.com
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: listenerset-parentref
  namespace: gateway-conformance-infra
spec:
  parentRef:
    name: gateway-parentref
    namespace: gateway-conformance-infra
  listeners:
    - name: listenerset-parentref-listener
      port: 8080
      protocol: HTTP
      hostname: listenerset-parentref.com
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-parentref-gwonly
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-parentref
      namespace: gateway-conformance-infra
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-parentref-lsonly
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: listenerset-parentref
      namespace: gateway-conformance-infra
  rules:
    - backendRefs:
        - name: infra-backend-v2
          port: 8080
